fixed some spacing issues

--- a/portfolio-website/src/sass/Home.scss
+++ b/portfolio-website/src/sass/Home.scss
@@ -8,6 +8,9 @@
         margin-bottom: 40px;
         font-size: 16px;
     }
+    .page__row {
+        margin-bottom: 200px;
+    }
     .page__project-img {
         width: 100%;
         object-fit: contain;
@@ -38,7 +41,7 @@
 }
 .home {
     margin-top: 20px;
-    margin-bottom: 50px;
+    margin-bottom: 200px;
     .home__header {
         border-top: solid black 2px;
         border-bottom: solid black 0.5px;
